[gd_scene load_steps=5 format=3 uid="uid://506fv2gitw7k"]

[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/TextBoxes/TextInput.gd" id="1_0xr58"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Draggable_Windows/Left_Bar/Parts/LeftBarTop.gd" id="1_f8pnh"]
[ext_resource type="PackedScene" uid="uid://boj8wsv76jqlm" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Vectors/Vector3iField.tscn" id="2_bdwmo"]
[ext_resource type="Script" path="res://Feagi-Godot-Interface/UI/Windows/Elements/Buttons/TextButton_Element.gd" id="4_vs7fw"]

[node name="LeftBarTop" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_right = -862.0
offset_bottom = -380.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f8pnh")

[node name="Row_Cortical_Name" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Row_Cortical_Name"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cortical Name"

[node name="Cortical_Name" type="LineEdit" parent="Row_Cortical_Name"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
script = ExtResource("1_0xr58")

[node name="Row_Cortical_ID" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Row_Cortical_ID"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cortical ID"

[node name="Cortical_ID" type="LineEdit" parent="Row_Cortical_ID"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
editable = false
script = ExtResource("1_0xr58")
enable_signaling_on_ready = false

[node name="Row_Cortical_Type" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Row_Cortical_Type"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cortical Type"

[node name="Cortical_Type" type="LineEdit" parent="Row_Cortical_Type"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
editable = false
script = ExtResource("1_0xr58")
enable_signaling_on_ready = false

[node name="Label_Position" type="Label" parent="."]
layout_mode = 2
text = "Position"

[node name="Cortical_Position" parent="." instance=ExtResource("2_bdwmo")]
layout_mode = 2
alignment = 1
initial_vector = Vector3i(1, 1, 1)

[node name="Label_Dimensions" type="Label" parent="."]
layout_mode = 2
text = "Dimension"

[node name="Cortical_Size" parent="." instance=ExtResource("2_bdwmo")]
layout_mode = 2
alignment = 1
label_x_text = &"W"
label_y_text = &"H"
label_z_text = &"D"
initial_vector = Vector3i(1, 1, 1)

[node name="SpacerX" parent="Cortical_Size" index="0"]
custom_minimum_size = Vector2(1, 0)

[node name="SpacerX2" parent="Cortical_Size" index="3"]
custom_minimum_size = Vector2(0, 0)

[node name="SpacerY" parent="Cortical_Size" index="4"]
custom_minimum_size = Vector2(1, 0)

[node name="SpacerY2" parent="Cortical_Size" index="7"]
custom_minimum_size = Vector2(1, 0)

[node name="SpacerZ" parent="Cortical_Size" index="8"]
custom_minimum_size = Vector2(0, 2)

[node name="gap" type="Control" parent="."]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Update_Button" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Apply Update"
script = ExtResource("4_vs7fw")

[node name="gap2" type="Control" parent="."]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[connection signal="user_interacted" from="Row_Cortical_Name/Cortical_Name" to="." method="_enable_update_button"]
[connection signal="user_interacted" from="Cortical_Position" to="." method="_enable_update_button"]
[connection signal="user_interacted" from="Cortical_Size" to="." method="_enable_update_button"]

[editable path="Cortical_Size"]
